Left section scroll and fix gap.

--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -56,7 +56,7 @@ code {
 }
 
 .app-content {
-  height: calc(100vh - 4rem);
+  height: calc(100vh - 3.25rem);
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -70,7 +70,7 @@ code {
   padding-left: 10px;
   margin-right: 0.5rem;
   background-color: whitesmoke;
-  overflow: visible;
+  overflow-y: scroll;
 }
 
 /* MISC: TODO: move these */
